--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 body {
-  background-color: pink;
+  background :pink;
 }
 
 h1 {
   color: blue;
-  font-size: 3em; 
+  font-size: 3em;
 }
 
 h2 {
@@ -18,6 +18,6 @@ h2 {
 }
 
 #tasks .completed {
-  background-color:#ccc;
+  background: #ccc;
   text-decoration: underline;
 }
